--- a/.gitignore
+++ b/.gitignore
@@ -10,4 +10,8 @@
 !.vscode/extensions.json
 *.code-workspace
 
+/node_modules
+/build
+
+
 # End of https://www.toptal.com/developers/gitignore/api/vscode
